@@ -127,6 +127,8 @@ php_apache_sapi_header_handler(sapi_header_struct *sapi_header, sapi_header_op_e
 
 			if (!strcasecmp(sapi_header->header, "content-type"))
 				ctx->r->content_type = apr_pstrdup(ctx->r->pool, val);
+                       else if (!strcasecmp(sapi_header->header, "content-length"))
+                               ap_set_content_length(ctx->r, strtol(val, (char **)NULL, 10));
 			else if (op == SAPI_HEADER_REPLACE)
 				apr_table_set(ctx->r->headers_out, sapi_header->header, val);
 			else
